# spotifyd

./: .clang_complete  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README  tags
cmake/: FindBoost.cmake  FindLibEvent.cmake  FindSpotify.cmake  FindThrift.cmake
include/: Spotify.h  SpotifyIPC.h  audio.h  cacheable.h  lockable.h  runnable.h  spotify_constants.h  spotify_cust.h  spotify_data.h  spotify_handler.h  spotify_ipc_constants.h  spotify_ipc_srv.h  spotify_ipc_types.h  spotify_types.h  spotify_types_constants.h  spotify_types_types.h  ticking_store.h  xplodify_audio.h  xplodify_handler.h  xplodify_multi_handler.h  xplodify_pl.h  xplodify_playmgr.h  xplodify_plc.h  xplodify_sess.h  xplodify_track.h
lib/libspotify-10.1.16-Darwin-universal/: ChangeLog  README
lib/libspotify-10.1.16-Darwin-universal/docs/html/: annotated.html  api_8h.html  browse_8c-example.html  classes.html  examples.html  files.html  functions.html  functions_vars.html  globals.html  globals_0x69.html  globals_0x73.html  globals_0x74.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  group__album.html  group__albumbrowse.html  group__artist.html  group__artistbrowse.html  group__error.html  group__image.html  group__inbox.html  group__link.html  group__playlist.html  group__search.html  group__session.html  group__toplist.html  group__track.html  group__types.html  group__user.html  index.html  jukebox_8c-example.html  modules.html  search_8c-example.html  structsp__audio__buffer__stats.html  structsp__audioformat.html  structsp__offline__sync__status.html  structsp__playlist__callbacks.html  (+5 more)
lib/libspotify-10.1.16-Darwin-universal/examples/spshell/: Makefile  spshell.c
lib/libspotify-10.1.16-Darwin-universal/man3/: album.3spotify  albumbrowse.3spotify  artist.3spotify  artistbrowse.3spotify  error.3spotify  image.3spotify  inbox.3spotify  link.3spotify  playlist.3spotify  search.3spotify  session.3spotify  sp_playlist_callbacks.3spotify  sp_playlistcontainer_callbacks.3spotify  sp_session_callbacks.3spotify  sp_session_config.3spotify  toplist.3spotify  track.3spotify  user.3spotify
src/: CMakeLists.txt  Spotify.cpp  Spotify.h  Spotify_server.skeleton.cpp  spotify-cli.py  spotify_constants.cpp  spotify_ipc_srv.cpp  spotifyd.c  spotifyd_srv.cpp  xplodify_handler.cpp  xplodify_multi_handler.cpp  xplodify_pl.cpp  xplodify_playmgr.cpp  xplodify_plc.cpp  xplodify_sess.cpp  xplodify_track.cpp
src/audio/: alsa-audio.c  audio.c  dummy-audio.c  openal-audio.c  osx-audio.c  xplodify_audio.cpp
src/gen-cpp/: Spotify.cpp  Spotify.h  spotify_types.cpp
src/gen-py/spotify/: Spotify-remote  Spotify.py  __init__.py  ttypes.py
thrift/: spotify.thrift  spotify_ipc.thrift  spotify_types.thrift
